<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.flaviovizza.androidtodos.ui.login.LoginViewModel"  />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <!-- Email Field -->
            <EditText
                android:id="@+id/username_edit_text"
                android:text="@={viewModel.username}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/common_email"
                android:autofillHints="@string/common_email"
                android:inputType="text"
                android:padding="12dp" />

            <!-- Password Field -->
            <EditText
                android:id="@+id/password_edit_text"
                android:text="@={viewModel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/common_password"
                android:autofillHints="@string/common_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:layout_marginTop="8dp" />

            <!-- Login Button -->
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/primary"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/login_button"
                android:textColor="#F4F4F4"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_do_not_have_account"
                android:textAlignment="center"
                android:layout_marginTop="16dp" />

            <!-- Sign Up Button -->
            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_variant"
                android:text="@string/register_button"
                android:textColor="#F4F4F4"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>
</layout>