<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <!-- Home Page -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.flaviovizza.androidtodos.ui.home.HomeFragment"
        android:label="@string/page_home_title"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detaiil"
            app:destination="@id/navigation_detaiil" />
    </fragment>

    <!-- Settings Page -->
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.flaviovizza.androidtodos.ui.settings.SettingsFragment"
        android:label="@string/page_settings_title"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_settings" />

    <!-- Second level page -->

    <!-- Detail Page -->
    <fragment
        android:id="@+id/navigation_detaiil"
        android:name="com.flaviovizza.androidtodos.ui.detail.TodoDetailFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_detail" />

</navigation>
