<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp">

        <!-- Theme -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:paddingHorizontal="8dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/select_theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_dark_theme"
                android:textSize="16sp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/theme_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <!-- Language -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:paddingHorizontal="8dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/select_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:text="@string/settings_select_language"
                android:textSize="16sp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_language_24dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="?attr/selectableItemBackground"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <!-- Logout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:paddingHorizontal="8dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/logout_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_logout"
                android:textSize="16sp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logout_24dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="?attr/selectableItemBackground" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

    </LinearLayout>
</ScrollView>
